# fastrand

./: Cargo.toml
src/: lib.rs
