[package]
name = "fastrand"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.5.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "A simple and fast random number generator"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/fastrand"
homepage = "https://github.com/smol-rs/fastrand"
documentation = "https://docs.rs/fastrand"
keywords = ["simple", "fast", "rand", "random", "wyrand"]
categories = ["algorithms"]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }
